<resources>
    <string name="app_name">PlantPlaces</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gpsage">GPS Age</string>
    <string name="zeropointzero">0.0</string>
    <string name="plantname">Plant Name</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="title_activity_gpsaplant">GPS A Plant</string>
    <string name="title_activity_color_capture">ColorCaptureActivity</string>
    <string name="searchbycolor">Search By Color</string>
    <string name="gpsaplant">GPS a Plant</string>
    <string name="noExternalReadPermission">Can\'t open the gallery without permission</string>
    <string name="lowpower">Low power mode</string>
    <string name="enhancedmode">Enhanced Mode</string>
    <string name="nocamerapermission">Unable to invoke camera without permission</string>
    <string name="picturesaved">Picture Saved</string>
    <string name="nogpspermission">GPS unavailable without permission</string>
    <string name="downloadingPlantNames">Downloading Plant Names</string>
    <string name="cancel">Cancel</string>
</resources>
